# argon

./: .clang-format  .gitignore  CMakeLists.txt  test.py
.github/workflows/: actions.yml
Sources/Compiler/: AST.h  Codegen.cpp  Globals.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
Sources/Runtime/: String.h  argon_runtime.h
Sources/Shared/Utils/: Stack.h  StringMap.h  TypeCasts.h  Utils.cpp  Utils.h
Tests/: constants.ar  hello_world.ar  if_statement.ar  while_loop.ar
Tests/functions/: return.ar  return_void.ar
Tests/math/: basic.ar  number_bases.ar  parens.ar
Tests/variables/: global_constants.ar  global_variable.ar  global_variable_without_default_value.ar  lots_of_variables.ar
